--- a/SDL-Tiling/SDL-Tiling/SDL-Tiling.vcxproj
+++ b/SDL-Tiling/SDL-Tiling/SDL-Tiling.vcxproj
@@ -37,10 +37,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\userone\Documents\Visual Studio 2010\Projects\SDL-1.2.15\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\lockdown\Documents\SDL-1.2.15\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>C:\Users\userone\Documents\Visual Studio 2010\Projects\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\lockdown\Documents\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
